# learnGPT

./: .gitignore  README.md  TODO.md  bigram.py  draw.py  gpt.py  gpt_dev.ipynb  logger.py  model.py  more.txt  pyproject.toml  requirement.txt  search_tb.py  test_attention.py  train.py  v2.py  visualize.ipynb
config/: bigram.py  config.yaml  gpt.py
config/data/: default.yaml
config/hydra/: default.yaml  multi_run.yaml
config/logger/: swanlab.yaml  tensorboard.yaml  wandb.yaml
config/model/: bigram.yaml  bigram_v2.yaml  bow.yaml  bow_v2.yaml  gpt.yaml  gpt_attn-cla.yaml  gpt_attn-gqa.yaml  gpt_attn-linear.yaml  gpt_attn-lla.yaml  gpt_attn-mha.yaml  gpt_attn-mqa.yaml  gpt_attn-sla.yaml  gpt_rope.yaml  gpt_v2.yaml  gpt_v3.yaml  mlp.yaml  rnn.yaml
config/training/: default.yaml
docs/: gpt_attn.md  gpt_rope.md  new_model.md  test_attention.md
docs/202504/experiment/: bigram.md  bow.md  gpt.md
docs/202504/results/: bow.md  gpt.md  mlp.md
docs/202504/scripts/: train_bigram.sh  train_bow.sh  train_gpt.sh  train_mlp.sh
docs/experiment/: bigram.md  bigram_v2.md  mlp.md  rnn.md
docs/results/: bigram.md  rnn.md
scripts/: new_model.sh  train_all.sh  train_bigram_v2.sh  train_bow_v2.sh  train_gpt_attn.sh  train_gpt_rope.sh  train_gpt_v2.sh  train_gpt_v3.sh  train_rnn.sh  train_wandb.sh
src/: config.py  data.py
src/models/: __init__.py  attention.py  bigram.py  bigram_v2.py  bow.py  bow_v2.py  gpt.py  gpt_attn.py  gpt_rope.py  gpt_v2.py  gpt_v3.py  mlp.py  rnn.py  utils.py
src/models/simplepe/: rope.py
src/utils/: config.py  func_utils.py  logger.py
