[project]
name = "learngpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.16",
    "einops>=0.8.1",
    "fire>=0.7.1",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "pandas>=2.3.2",
    "swanlab>=0.6.8",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.3",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
